--- a/src/main/resources/cron.properties
+++ b/src/main/resources/cron.properties
@@ -5,7 +5,7 @@ cron.zookeeper.root.name=/cron
 #\u4EA7\u54C1\u540D\u79F0
 cron.zookeeper.product.name=/test
 #zk\u8FDE\u63A5\u5730\u5740
-cron.zookeeper.connect.url=zk1.cron.test.com:2182,zk2.cron.test.com:2182,zk3.cron.test.com:2182
+cron.zookeeper.connect.url=127.0.0.1:2181,127.0.0.1:2182,127.0.0.1:2183
 #zk\u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4
 cron.zookeeper.connect.timeout=30000
 #\u662F\u5426\u4F7F\u7528\u6570\u636E\u5E93\u6765\u5224\u65AD\u5355\u70B9
